fix alignment on player page

--- a/src/ui/src/App.css
+++ b/src/ui/src/App.css
@@ -1,3 +1,9 @@
-.app {
-  padding: 10px;
+html,
+body,
+#root,
+.app,
+.page {
+  height: 100%;
+  padding: 0;
+  margin: 0;
 }
