--- a/src/ui/src/CardGrid.css
+++ b/src/ui/src/CardGrid.css
@@ -1,6 +1,5 @@
 .root {
   display: flex;
-  flex-grow: 1;
 }
 
 .paper {
