--- a/src/ui/src/PlayerPage.css
+++ b/src/ui/src/PlayerPage.css
@@ -1,3 +1,9 @@
+.PlayerPage {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
 .Scoreboard {
   margin-left: auto;
 }
